--- a/style.css
+++ b/style.css
@@ -88,3 +88,11 @@ nav{
     width: 15px;
     margin-top: 7px;
 }
+
+.location-input {
+    flex: 1;
+}
+
+.search-bar form label {
+    font-weight: 600;
+}
