--- a/style.css
+++ b/style.css
@@ -300,10 +300,36 @@ nav{
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
 }
-
+nav .fa-bars {
+    display: none;
+    
+}
 /* Path: index.html */
 
 
-@media only screen and ()
-    
+@media only screen and (max-width: 768px) {
+
+    .logo{
+        position:fixed;
+        top: 4%;
+        left: 7%;
+    }
+    nav{
+        position: fixed;
+        top: 0%;
+        z-index: 100;
+        display: inline-block;
+        width: 100%;
+        background: #000;
+        text-align: right;
+        padding: 100px 7% 0;
+    }
+    nav .nav-links li{
+        display: block;
+        margin: 10px 0;
+    }
+    .register-btn{
+        display: inline-block;
+        margin: 15px 0 30px;
+    }
 }
