update media screen

--- a/style.css
+++ b/style.css
@@ -286,19 +286,20 @@ nav{
     content: '';
     background: #fff;
     width: 25px;
+    height: 3px;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
     bottom: -12px;
-    border-radius: 5px;
+    border-radius: 2px;
     -webkit-transform: translate(-50%);
     -moz-transform: translate(-50%);
     -ms-transform: translate(-50%);
     -o-transform: translate(-50%);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
 }
 nav .fa-bars {
     display: none;
@@ -341,4 +342,18 @@ nav .fa-bars {
         cursor: pointer;
         font-size: 28px;
     }
+    .active::after{
+    left: -40px;
+    transform: translate(0, 50%);
+    bottom: -12px;
+    border-radius: 2px;
+    -webkit-transform: translate(0, 50%);
+    -moz-transform: translate(0, 50%);
+    -ms-transform: translate(0, 50%);
+    -o-transform: translate(0, 50%);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
 }
+
